--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -7,3 +7,5 @@ JWT_SECRET=mysecrettoken
 CLOUDINARY_CLIENT_NAME=dmeubmv8t
 CLOUDINARY_CLIENT_API=149615871233231
 CLOUDINARY_CLIENT_SECRET=z6lmvKWDQ6-SysQryg6iflKr1wk
+
+FRONTEND_URL= http://localhost:3000
